fix the add investment cancel button action

--- a/InvestmentTracker/Pages/Investments/Create.cshtml
+++ b/InvestmentTracker/Pages/Investments/Create.cshtml
@@ -48,7 +48,7 @@
         <i class="bi bi-save"></i>
         <span class="d-none d-sm-inline ms-1">Save</span>
     </button>
-    <a class="btn btn-secondary" asp-page="Index">Cancel</a>
+    <a class="btn btn-secondary" asp-page="./List">Cancel</a>
 </form>
 
 @section Scripts{
