--- a/InvestmentTracker/Pages/Shared/_KeyboardShortcutsPartial.cshtml
+++ b/InvestmentTracker/Pages/Shared/_KeyboardShortcutsPartial.cshtml
@@ -44,23 +44,29 @@
             </div>
 
             <div class="keyboard-shortcuts-section">
-                <h6 class="keyboard-shortcuts-section-title">Expense Management</h6>
+                <h6 class="keyboard-shortcuts-section-title">Investment Management</h6>
+                <div class="keyboard-shortcuts-list">
+                    <div class="keyboard-shortcut-item">
+                        <span class="keyboard-shortcut-key">N</span>
+                        <span class="keyboard-shortcut-description">Create New Investment</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="keyboard-shortcuts-section">
+                <h6 class="keyboard-shortcuts-section-title">Values & Contributions</h6>
                 <div class="keyboard-shortcuts-list">
                     <div class="keyboard-shortcut-item">
                         <span class="keyboard-shortcut-key">A</span>
-                        <span class="keyboard-shortcut-description">Add Expense (Dashboard & Recurring)</span>
+                        <span class="keyboard-shortcut-description">Add Investment Value</span>
                     </div>
                     <div class="keyboard-shortcut-item">
-                        <span class="keyboard-shortcut-key">Q</span>
-                        <span class="keyboard-shortcut-description">Quick Add Irregular Expense</span>
+                        <span class="keyboard-shortcut-key">C</span>
+                        <span class="keyboard-shortcut-description">Add One-Time Contribution</span>
                     </div>
                     <div class="keyboard-shortcut-item">
-                        <span class="keyboard-shortcut-key">O</span>
-                        <span class="keyboard-shortcut-description">Add One-Time Income</span>
-                    </div>
-                    <div class="keyboard-shortcut-item">
-                        <span class="keyboard-shortcut-key">U</span>
-                        <span class="keyboard-shortcut-description">Update Income</span>
+                        <span class="keyboard-shortcut-key">F</span>
+                        <span class="keyboard-shortcut-description">Focus Search/Filter Field</span>
                     </div>
                 </div>
             </div>
