--- a/InvestmentTracker/Pages/Investments/List.cshtml
+++ b/InvestmentTracker/Pages/Investments/List.cshtml
@@ -10,6 +10,9 @@
         <span class="d-none d-sm-inline ms-1">Add Investment</span>
     </a>
 </p>
+<div class="text-muted small mb-3">
+    <i class="bi bi-keyboard me-1"></i>Tip: Press <kbd>N</kbd> to create new investment, <kbd>?</kbd> for all shortcuts
+</div>
 <div class="table-responsive">
 <table class="table table-striped">
     <thead>
