--- a/InvestmentTracker/Pages/Investments/Edit.cshtml
+++ b/InvestmentTracker/Pages/Investments/Edit.cshtml
@@ -50,7 +50,7 @@
     </div>
 
     <div class="text-muted small mt-2">
-        <i class="bi bi-keyboard me-1"></i>Tip: Press <kbd>Enter</kbd> in any field to save changes
+        <i class="bi bi-keyboard me-1"></i>Tip: Press <kbd>Enter</kbd> in any field to save changes, or <kbd>Esc</kbd> to cancel and return to investments list
     </div>
 </form>
 
